Fixing filepaths and whitespacing in css file for oasis

--- a/skins/oasis/css/core/GlobalNotificationOasis.scss
+++ b/skins/oasis/css/core/GlobalNotificationOasis.scss
@@ -1,13 +1,13 @@
 @import 'layout';
 @import 'skins/shared/mixins/box-sizing-border-box';
 @import 'skins/shared/mixins/calc';
-@import 'extensions/wikia/GlobalNotifications/css/GlobalNotifications';
+@import 'extensions/wikia/GlobalNotification/css/GlobalNotifications';
 
 /* temp transition code until grid is fully rolled out, remove and integrate after transition */
 .wikia-grid {
 	.global-notification {
+		width: 988px;
 
-	  width: 988px;
 		&.float {
 			margin-left: -505px;
 
